[project]
name = "docker-here"
description = ""
authors = [
    {name = "NyanKiyoshi",email = "mikail-gh@proton.me"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

